--- a/Vulcanizare.WEB/Pages/CartItems/Edit.cshtml
+++ b/Vulcanizare.WEB/Pages/CartItems/Edit.cshtml
@@ -30,7 +30,7 @@
                 <span asp-validation-for="CartItem.AppointmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CartItem.TireId" class="control-label"></label>
+                <label asp-for="CartItem.TireId" class="control-label">Tire</label>
                 <select asp-for="CartItem.TireId" class="form-control" asp-items="ViewBag.TireId"></select>
                 <span asp-validation-for="CartItem.TireId" class="text-danger"></span>
             </div>
