--- a/Vulcanizare.WEB/Pages/TireHotels/Index.cshtml
+++ b/Vulcanizare.WEB/Pages/TireHotels/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.TireStatus)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
+                @Html.DisplayFor(modelItem => item.User.Email)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
