--- a/Vulcanizare.WEB/Pages/Appointments/Edit.cshtml
+++ b/Vulcanizare.WEB/Pages/Appointments/Edit.cshtml
@@ -60,8 +60,8 @@
                 <span asp-validation-for="Appointment.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Appointment.ServicePrice" class="control-label"></label>
-                <input asp-for="Appointment.ServicePrice" class="form-control" />
+                <label asp-for="Appointment.ServicePrice" class="control-label">Service Price ( in lei )</label>
+                <input asp-for="Appointment.ServicePrice" class="form-control" readonly />
                 <span asp-validation-for="Appointment.ServicePrice" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -123,3 +123,4 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
