--- a/Vulcanizare.WEB/Pages/Carts/Edit.cshtml
+++ b/Vulcanizare.WEB/Pages/Carts/Edit.cshtml
@@ -20,6 +20,11 @@
                 <span asp-validation-for="Cart.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Cart.Status" class="control-label"></label>
+                <input asp-for="Cart.Status" class="form-control" />
+                <span asp-validation-for="Cart.Status" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
