--- a/Vulcanizare.WEB/Pages/TireHotels/Details.cshtml
+++ b/Vulcanizare.WEB/Pages/TireHotels/Details.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.TireHotel.User)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TireHotel.User.Id)
+            @Html.DisplayFor(model => model.TireHotel.User.Email)
         </dd>
     </dl>
 </div>
